# Android-uix

./: CHANGELOG.md  README.md
sample/: bintrayUpload.gradle  build.gradle  settings.gradle
sample/app/: build.gradle
sample/app/src/main/: AndroidManifest.xml
sample/app/src/main/java/me/shouheng/suix/: MainActivity.kt  SampleApp.kt
sample/app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
sample/app/src/main/res/layout/: activity_container.xml  activity_dialog.xml  activity_layout.xml  activity_layout2.xml  activity_main.xml  activity_matisse_sample.xml  activity_pop.xml  activity_sliding.xml  activity_tools.xml  activity_widgets.xml  fragment_setting.xml  layout_dialog_bottom_sample.xml  layout_dialog_content_multiple.xml  layout_dialog_content_sample.xml  layout_dialog_title_sample.xml  layout_scene_card_item.xml
sample/app/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml  styles.xml
sample/app/src/main/res/xml/: network_security_config.xml  provider_paths.xml
sample/app/src/test/java/me/shouheng/suix/: ExampleUnitTest.java
uix/: build.gradle
uix-common/: build.gradle
uix-common/src/main/: AndroidManifest.xml
uix-common/src/main/java/me/shouheng/uix/common/: UIX.kt
uix-image/: CMakeLists.txt  build.gradle
uix-image/src/main/: AndroidManifest.xml
uix-image/src/main/cpp/: android_utils.cpp  img_cropper.cpp  img_proc.cpp
uix-image/src/main/cpp/include/: android_utils.h
uix-image/src/main/java/me/shouheng/image/proc/: BeautyCropper.java  ImageProcessor.java
uix-image/src/main/java/me/shouheng/image/utils/: CropUtils.java
uix-image/src/main/java/me/shouheng/image/widget/: CropImageView.java
uix-image/src/main/java/me/shouheng/uix/image/proc/: CropManager.java  ImageProcessor.java
uix-image/src/main/java/me/shouheng/uix/image/utils/: CropUtils.java
uix-image/src/main/java/me/shouheng/uix/image/widget/: CropImageView.java
uix-image/src/main/res/values/: attr.xml  strings.xml
uix-pages/: build.gradle
uix-pages/src/main/: AndroidManifest.xml
uix-pages/src/main/java/me/shouheng/uix/pages/: CrashReportActivity.kt
uix-pages/src/main/res/drawable/: uix_about_page_card.xml  uix_bg_retry.xml  uix_bg_retry_dark.xml  uix_bg_toolbar_shade.xml  uix_camera_shot_button.xml  uix_done_24.xml  uix_flip_camera_ios_24.xml  uix_gradient_24.xml  uix_grid_on_24.xml  uix_photo_library_24.xml  uix_scan_ray.xml
uix-pages/src/main/res/layout/: uix_activity_crash_report.xml  uix_activity_gallery.xml  uix_activity_take_photo.xml  uix_dialog_content_rating.xml  uix_fragment_about.xml  uix_fragment_web.xml  uix_item_about_section.xml  uix_item_about_text.xml  uix_item_about_user.xml  uix_item_setting_desc.xml  uix_item_setting_divider.xml  uix_item_setting_image.xml  uix_item_setting_long_text.xml  uix_item_setting_switch.xml  uix_item_setting_text.xml  uix_layout_about_header.xml  uix_layout_crash_report_message.xml  uix_layout_network_error_page.xml
uix-pages/src/main/res/menu/: uix_web.xml
uix-pages/src/main/res/values/: colors.xml  strings.xml  styles.xml
uix-pages/src/main/res/values-ru-rRU/: strings.xml
uix-pages/src/main/res/values-zh-rCN/: strings.xml
uix-pages/src/main/res/values-zh-rMO/: strings.xml
uix-widget/: build.gradle  proguard-rules.pro
uix-widget/src/main/res/layout/: uix_dialog_content_address.xml  uix_dialog_content_address_item.xml  uix_dialog_content_list_custom.xml  uix_dialog_content_list_simple.xml  uix_dialog_content_list_simple_item.xml  uix_dialog_content_simple.xml  uix_dialog_footer_simple.xml  uix_dialog_layout.xml  uix_dialog_title_simple.xml  uix_layout_empty_view.xml  uix_layout_pagertab.xml  uix_layout_pagertab_imagetabview.xml  uix_loading_button.xml  uix_logout_preference.xml  uix_message_dialog.xml
uix-widget/src/main/res/values/: attrs.xml  dimens.xml  strings.xml  styles.xml
uix-widget/src/main/res/values-ru-rRU/: strings.xml
uix-widget/src/main/res/values-zh-rTW/: strings.xml
uix/src/main/: AndroidManifest.xml
uix/src/main/java/me/shouheng/uix/: UIX.kt  UIXConfig.kt
uix/src/main/java/me/shouheng/uix/bean/: AddressBean.kt
uix/src/main/java/me/shouheng/uix/button/: Button.kt  ColorUtils.kt  LoadingButton.kt  SwitchButton.kt
uix/src/main/java/me/shouheng/uix/config/: Config.kt  Constants.kt
uix/src/main/java/me/shouheng/uix/dialog/: BeautyDialog.kt  Config.kt  Constants.kt  DialogUtils.kt  MessageDialog.kt
uix/src/main/java/me/shouheng/uix/edittext/: ClearEditText.kt  CountdownView.kt  (+2 more)
uix/src/main/res/drawable/: uix_anim_loading.xml  uix_bg_dialog_center_dark.xml  uix_bg_retry.xml  uix_bg_retry_dark.xml  uix_shape_btn.xml  uix_shape_red_dot.xml
uix/src/main/res/layout/: uix_activity_crash.xml  uix_activity_gallery.xml  uix_dialog_content_address.xml  uix_dialog_content_edit_simple.xml  uix_dialog_content_list_custom.xml  uix_dialog_content_list_simple_item.xml  uix_dialog_content_simple.xml  uix_dialog_footer_simple.xml  uix_dialog_layout.xml  uix_dialog_loading.xml  uix_fragment_about.xml  uix_item_about_text.xml  uix_item_about_user.xml  uix_item_setting_desc.xml  uix_item_setting_divider.xml  uix_item_setting_image.xml  uix_item_setting_long_text.xml  uix_item_setting_switch.xml  uix_item_setting_text.xml  uix_layout_empty_view.xml  uix_layout_network_error_page.xml  uix_layout_pagertab_imagetabview.xml  uix_message_dialog.xml
uix/src/main/res/menu/: uix_gallery.xml
uix/src/main/res/values/: attrs.xml  colors.xml  configs.xml  dimens.xml  strings.xml  styles.xml
(+204 files in other folders)
